unpackaged/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Female__c.field-meta.xml
<CustomField>
    <fullName>hed__Female__c</fullName>
    <description>The value used for the Reciprocal Setting if the Contact&#39;s Gender or Salutation field indicates Female gender.</description>
    <inlineHelpText>The value used for the Reciprocal Setting if the Contact&#39;s Gender or Salutation field indicates Female gender.</inlineHelpText>
    <label>Female</label>
    <length>255</length>
    <type>Text</type>
</CustomField>