unpackaged/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Male__c.field-meta.xml
<CustomField>
    <fullName>hed__Male__c</fullName>
    <description>The value used for the Reciprocal Setting if the Contact&#39;s Gender or Salutation field indicates Male gender.</description>
    <inlineHelpText>The value used for the Reciprocal Setting if the Contact&#39;s Gender or Salutation field indicates Male gender.</inlineHelpText>
    <label>Male</label>
    <length>255</length>
    <type>Text</type>
</CustomField>