unpackaged/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Neutral__c.field-meta.xml
<CustomField>
    <fullName>hed__Neutral__c</fullName>
    <description>The value used if the Contact&#39;s Gender and Saluation fields don&#39;t indicate gender.</description>
    <inlineHelpText>The value used if the Contact&#39;s Gender and Saluation fields don&#39;t indicate gender.</inlineHelpText>
    <label>Neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>